--- a/css/calendar-strip-blue.css
+++ b/css/calendar-strip-blue.css
@@ -28,7 +28,7 @@
 
 
   .footer { font-size:12px; background-color:#00a; width:100%; }
-  .preview-wrapper { width:85%; margin:30px 50px; background-color:#fff; height:210px; border-radius:7px;}
+  .preview-wrapper { width:85%; margin:40px 100px; background-color:#fff; height:210px; border-radius:7px;}
 
   .lastmonth { width: 50%; }
   .nextmonth { width: 50%; }
